fix stream version error